--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "check": "astro check",
     "astro": "astro"
   },
   "dependencies": {
@@ -28,7 +29,9 @@
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.4",
     "@types/blobshape": "^1.0.3",
-    "@types/node": "^20.12.7"
+    "@types/node": "^20.12.7",
+    "typescript": "^5.9.2"
   }
 }
