--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.1.0",
     "@astrojs/netlify": "^6.2.3",
     "@astrojs/react": "^4.2.1",
     "@fontsource-variable/inter": "^5.2.5",
